# docs/swagger.yaml
@@ -17,4 +17,128 @@ paths:
       summary: Show the status of server.
       tags:
       - root
+  /files:
+    delete:
+      description: retrieve a file
+      responses:
+        "201":
+          description: Created
+        "404":
+          description: Not Found
+      summary: Files
+      tags:
+      - Files
+    get:
+      description: retrieve a file
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: Blob
+        "404":
+          description: Not Found
+      summary: Files
+      tags:
+      - Files
+    patch:
+      description: retrieve a file
+      responses:
+        "200":
+          description: video info
+          schema:
+            type: Videos
+        "404":
+          description: Not Found
+      summary: Files
+      tags:
+      - Files
+    post:
+      description: retrieve a file
+      responses:
+        "200":
+          description: video info
+          schema:
+            type: Videos
+        "404":
+          description: Not Found
+      summary: Files
+      tags:
+      - Files
+    put:
+      description: retrieve a file
+      responses:
+        "200":
+          description: video info
+          schema:
+            type: Videos
+        "404":
+          description: Not Found
+      summary: Files
+      tags:
+      - Files
+  /files/:id:
+    get:
+      description: retrieve a file
+      responses:
+        "200":
+          description: video info
+          schema:
+            type: Videos
+        "404":
+          description: Not Found
+      summary: Files
+      tags:
+      - Files
+  /files/detail:
+    get:
+      description: retrieve a file
+      responses:
+        "200":
+          description: video info
+          schema:
+            type: Videos
+        "404":
+          description: Not Found
+      summary: Files
+      tags:
+      - Files
+  /files/files:
+    get:
+      description: retrieve a file
+      responses:
+        "200":
+          description: video info
+          schema:
+            type: Videos
+        "404":
+          description: Not Found
+      summary: Files
+      tags:
+      - Files
+  /videos/:videoID:
+    get:
+      description: get a video by id
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: Videos
+        "404":
+          description: Not Found
+      summary: Videos
+      tags:
+      - Videos
+  /videos/chann/:channId:
+    get:
+      description: get all videos from a channel
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: Videos
+        "404":
+          description: Not Found
+      summary: Videos
+      tags:
+      - Videos
 swagger: "2.0"
